--- a/Backend/dockerfile
+++ b/Backend/dockerfile
@@ -1,17 +1,17 @@
-# Use an official Java runtime as base image
-FROM openjdk:21-jdk-slim
+# Use a stable Java LTS runtime
+FROM openjdk:17-jdk-slim
 
 # Set working directory
 WORKDIR /app
 
-# Copy the project files
+# Copy Maven wrapper and project files
 COPY . .
 
-# Build the project
+# Build the Spring Boot JAR
 RUN ./mvnw clean package -DskipTests
 
-# Expose the port
+# Expose the app port
 EXPOSE 8080
 
-# Run the jar
+# Run the JAR
 CMD ["java", "-jar", "target/*.jar"]
