--- a/Backend/dockerfile
+++ b/Backend/dockerfile
@@ -1,6 +1,5 @@
-
-# Use Eclipse Temurin (official OpenJDK build)
-FROM eclipse-temurin:17-jdk
+# Use Eclipse Temurin JDK 21 (Render supports this)
+FROM eclipse-temurin:21-jdk
 
 # Set working directory
 WORKDIR /app
