--- a/Backend/dockerfile
+++ b/Backend/dockerfile
@@ -1,20 +1,19 @@
-# Use Eclipse Temurin JDK 21 (Render supports this)
-FROM eclipse-temurin:21-jdk
-
-# Set working directory
+# 1️⃣ Build stage
+FROM eclipse-temurin:21-jdk AS builder
 WORKDIR /app
-
-# Copy project files
 COPY . .
-
-# Give permission to mvnw (Maven Wrapper)
 RUN chmod +x ./mvnw
-
-# Build the Spring Boot JAR
 RUN ./mvnw clean package -DskipTests
 
-# Expose the port for Render
+# 2️⃣ Run stage (smaller image)
+FROM eclipse-temurin:21-jdk
+WORKDIR /app
+
+# Copy only the built jar from builder stage
+COPY --from=builder /app/target/*.jar app.jar
+
+# Expose the port
 EXPOSE 8080
 
-# Run the JAR
-CMD ["java", "-jar", "target/*.jar"]
+# Run the jar
+CMD ["java", "-jar", "app.jar"]
