--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=chat-app-backend
 
-spring.data.mongodb.uri=mongodb+srv://gosink:Apple9697@cluster0.wrramed.mongodb.net/chatapp
+spring.data.mongodb.uri=mongodb+srv://gosink:Apple9697@cluster0.wrramed.mongodb.net/chatapp?retryWrites=true&w=majority&tls=true&sslInvalidHostNameAllowed=true
