--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=chat-app-backend
 
-spring.data.mongodb.uri=mongodb://gosink:Apple9697@ac-g6pxgc9-shard-00-00.wrramed.mongodb.net:27017,ac-g6pxgc9-shard-00-01.wrramed.mongodb.net:27017,ac-g6pxgc9-shard-00-02.wrramed.mongodb.net:27017/chatapp?ssl=true&replicaSet=atlas-xf554k-shard-0&authSource=admin&retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://gosink:Apple9697@cluster0.wrramed.mongodb.net/chatapp?retryWrites=true&w=majority&ssl=true&sslInvalidHostNameAllowed=true
 
